lots of porting done